Add feature to change number of grids

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Etch a Sketch.</h1>
 
-    <div class="container"></div>
+    <p>Hover your mouse over the boxes to draw something!</p>
+    <button>Set grids</button>
+
+    <div class="drawspace">
+        <div class="container"></div>
+    </div>
     
 </body>
 </html>
