Add feature to reset drawing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Etch a Sketch.</h1>
 
     <p>Hover your mouse over the boxes to draw something!</p>
-    <button>Set grids</button>
+    <button class="set-grids">Set grids</button> 
+    <button class="reset">Reset</button>
 
     <div class="drawspace">
         <div class="container"></div>
