--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Etch a Sketch.</h1>
+    <h1>Etch a Sketch!</h1>
 
     <p>Hover your mouse over the boxes to draw something!</p>
     <button class="set-grids">Set grids</button> 
